fix map tile spacing

--- a/meinberlin/assets/scss/components_user_facing/_projects_map.scss
+++ b/meinberlin/assets/scss/components_user_facing/_projects_map.scss
@@ -51,6 +51,7 @@
 
     .leaflet-popup-content a {
         color: $text-base;
+        padding: 1rem 1rem 0.38rem;
     }
 
     .leaflet-popup-tip-container {
